kubernetes/my-nginx-pod.yaml
apiVersion: v1
kind:   Pod
metadata:
  name: my-nginx-pod
  labels:
    component: web
    app: my-app
  
spec:
  containers:
    - name: my-nginx
      image: tplawczyk/mynginx
      ports:
        - containerPort: 80
