kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mypostgres-deployment
  labels:
    component: mypostgres
    app: my-app
  
spec: 
  template:
    metadata:
      name: mypostgres-pod
      labels:
        app: my-app
        component: mypostgres
    spec:
      containers:
        - name: mypostgres-container
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresvolume
              
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: postgres-pvc
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: mypostgres
