kubernetes/myredislb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myredislb-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379 

  selector:  
    component: cache
    app: my-app
