kubernetes/postgres-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

  selector:  
    component: mypostgres
    app: my-app
